--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,8 @@
 
 * {
   scroll-behavior: smooth;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 html,
@@ -30,18 +32,53 @@ body ul {
   margin: 0;
 }
 
-.navbar {
-  top: 0;
-  background: #202020;
+.toggle-button {
+  position: absolute;
+  top: .5rem;
+  right: 1rem;
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+
+.toggle-button .bar {
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.nav-container {
   margin: auto;
   max-width: 1500px;
+  top: 0;
   position: -webkit-sticky;
   position: sticky;
   z-index: 2000;
 }
 
+.navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #202020;
+}
+
 .navbar .logo {
-  margin: 1rem;
+  margin: 0.5rem;
   text-decoration: none;
   font-weight: bold;
   color: white;
@@ -52,29 +89,83 @@ body ul {
   color: var(--primary-color);
 }
 
-.navbar nav {
-  display: none;
-}
-
-.navbar .container {
+.navbar-links ul {
+  margin: 0;
+  padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  place-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
 }
 
-.navbar .container img {
-  margin: 1rem;
-  width: 2em;
+.navbar-links ul li {
+  list-style: none;
 }
 
-.navbar .mobile-menu {
-  cursor: pointer;
+.navbar-links ul li a {
+  color: white;
+  padding: 1rem;
+  display: block;
 }
 
+.navbar-links li {
+  list-style: none;
+}
+
+.navbar-links ul {
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.navbar-links ul li {
+  list-style: none;
+}
+
+.navbar-links ul li a {
+  color: white;
+  padding: 1rem;
+  display: block;
+}
+
+.navbar-links li:hover {
+  background-color: #555;
+}
+
+/*.navbar {
+    top: 0;
+    background: #202020;
+    margin: auto;
+    max-width: 1500px;
+    position: sticky;
+    z-index: 2000;
+    .logo {
+        margin: 1rem;
+        text-decoration: none;
+        font-weight: bold;
+        color: white;
+        font-size: 1.2em;
+        span {
+            color: var(--primary-color);
+        }
+    }
+    nav {
+        display: block;
+    }
+    .container {
+        display: flex;
+        place-content: space-between;
+        align-items: center;
+        img {
+            margin: 1rem;
+            width: 2em;
+        }
+    }
+    .mobile-menu {
+        cursor: pointer;
+    }
+}*/
 .grid {
   background-color: black;
   padding: 0;
@@ -345,6 +436,44 @@ body ul {
 }
 
 @media screen and (max-width: 545px) {
+  .toggle-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .navbar-links {
+    display: none;
+  }
+  .navbar-links {
+    width: 100%;
+  }
+  .navbar-links.active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar-links ul {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .navbar-links ul li {
+    text-align: center;
+  }
+  .navbar-links ul li a {
+    padding: 0.5rem 1rem;
+  }
   .heading-div {
     font-size: 1.5em;
     height: 6em;
