--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -7,6 +7,7 @@
     box-sizing: border-box;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@900&display=swap');
 html,
 body {
     font-size: 16px;
@@ -229,12 +230,14 @@ body {
     top: 50%;
     transform: translate(-50%, -50%);
     font-size: 2em;
-    filter: blur(7px);
+    filter: blur(6px);
     max-width: 1500px;
     height: auto;
     position: absolute;
-    line-height: 2em;
+    line-height: 1.7em;
     color: var(--primary-color);
+    font-family: 'Source Code Pro';
+    font-style: normal;
 }
 
 // About section
@@ -267,7 +270,6 @@ body {
 }
 
 .about-tag-line {
-    word-break: break-all;
     span:hover {
         color: white;
     }
@@ -279,7 +281,6 @@ body {
     font-size: 2.5em; // 1rem;
     color: lightslategrey;
     li {
-        word-break: break-all;
         padding: 0.5em;
         border-radius: 10px;
     }
@@ -296,17 +297,23 @@ body {
 }
 
 .animated-image-about {
-    margin: 0 1em 1em 1em;
-    padding: 0.5em;
     border-color: blueviolet;
     border-style: solid;
     border-width: 6px;
     border-radius: 25px;
-    height: 100%;
-    max-width: 500px;
+    margin: 1em 1em 1em 1em;
+    text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    p {
+        font-size: 4em;
+        line-height: 0.7em;
+        margin: 0;
+        background-color: teal;
+        font-family: 'Source Code Pro';
+        overflow: hidden;
+    }
 }
 
 .contact-content {
@@ -314,6 +321,23 @@ body {
     margin-left: 2rem;
     margin-right: 1rem;
     margin-top: 0;
+    font-size: 2.5em;
+}
+
+.button {
+    border: none;
+    background: none;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+}
+
+#ID {
+    color: lightslategrey;
+    cursor: pointer;
+    background-color: transparent;
+    border-style: none;
+    text-decoration: none;
     font-size: 2.5em;
 }
 
@@ -442,11 +466,19 @@ body {
         margin-left: 0.5rem;
         margin-right: 0.5rem;
         margin-top: 0;
-        font-size: 2em;
+        font-size: 1.5em;
     }
     .list {
         margin-left: 0.5rem;
         margin-right: 0.5rem;
+        font-size: 1.5em;
+    }
+    #ID {
+        color: lightslategrey;
+        cursor: pointer;
+        background-color: transparent;
+        border-style: none;
+        text-decoration: none;
         font-size: 1.5em;
     }
 }
