got a static matrix ->  make the matrix resisable next

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -297,10 +297,10 @@ body {
 }
 
 .animated-image-about {
-    border-color: blueviolet;
-    border-style: solid;
-    border-width: 6px;
-    border-radius: 25px;
+    //border-color: blueviolet;
+    //border-style: solid;
+    //border-width: 6px;
+    //border-radius: 25px;
     margin: 1em 1em 1em 1em;
     text-align: center;
     display: flex;
